--- a/index.html
+++ b/index.html
@@ -2,46 +2,215 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <title>Larea</title>
+  <title>Larea Browser</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;800&family=Material+Symbols+Outlined" rel="stylesheet" />
 
   <style>
     body {
       margin: 0;
       background: radial-gradient(circle at top, #1a1a2e, #050510);
       color: white;
-      font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont;
+      font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
+      overflow: hidden;
+      position: relative;
     }
 
+    /* Arka plan efekti */
+    .glow {
+      position: absolute;
+      width: 600px;
+      height: 600px;
+      background: radial-gradient(circle, rgba(120, 120, 255, 0.15) 0%, rgba(0, 0, 0, 0) 70%);
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: -1;
+      pointer-events: none;
+    }
+
+    /* Sağ Üst Buy Me a Coffee Butonu */
+    .coffee-btn {
+      position: absolute;
+      top: 30px;
+      right: 30px;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      text-decoration: none;
+      color: #fff;
+      background: rgba(255, 221, 0, 0.1);
+      border: 1px solid rgba(255, 221, 0, 0.3);
+      padding: 10px 20px;
+      border-radius: 30px;
+      font-weight: 500;
+      transition: all 0.3s ease;
+      backdrop-filter: blur(10px);
+    }
+
+    .coffee-btn:hover {
+      background: rgba(255, 221, 0, 0.2);
+      box-shadow: 0 0 15px rgba(255, 221, 0, 0.2);
+      transform: translateY(-2px);
+    }
+
+    .coffee-icon {
+      font-size: 20px;
+    }
+
+    /* Ana Kart */
     .card {
       text-align: center;
-      padding: 48px;
-      border-radius: 20px;
-      background: rgba(255,255,255,0.05);
-      backdrop-filter: blur(20px);
-      box-shadow: 0 0 60px rgba(120,120,255,0.25);
+      padding: 60px 40px;
+      max-width: 600px;
+      width: 90%;
+      border-radius: 24px;
+      background: rgba(255, 255, 255, 0.03);
+      border: 1px solid rgba(255, 255, 255, 0.05);
+      backdrop-filter: blur(24px);
+      box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
+      animation: fadeIn 1s ease-out;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     h1 {
-      font-size: 56px;
+      font-size: 64px;
       margin: 0;
-      letter-spacing: 4px;
+      background: linear-gradient(135deg, #fff 0%, #a5a5ff 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      letter-spacing: 2px;
+      font-weight: 800;
     }
 
-    p {
-      margin-top: 12px;
-      opacity: 0.75;
+    .tagline {
+      font-size: 18px;
+      color: #b0b0c0;
+      margin-top: 10px;
+      font-weight: 300;
     }
+
+    /* Özellikler Grid */
+    .features {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin: 40px 0;
+      flex-wrap: wrap;
+    }
+
+    .feature-item {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      background: rgba(255,255,255,0.05);
+      padding: 8px 16px;
+      border-radius: 12px;
+      font-size: 14px;
+      color: #e0e0e0;
+      border: 1px solid rgba(255,255,255,0.05);
+    }
+
+    .feature-item span {
+      font-size: 18px;
+      color: #7878ff;
+    }
+
+    /* İndirme Butonu */
+    .download-btn {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: 12px;
+      background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);
+      color: #050510;
+      text-decoration: none;
+      padding: 16px 40px;
+      border-radius: 50px;
+      font-weight: 800;
+      font-size: 18px;
+      transition: all 0.3s ease;
+      box-shadow: 0 10px 20px rgba(79, 172, 254, 0.3);
+      position: relative;
+      overflow: hidden;
+    }
+
+    .download-btn:hover {
+      transform: translateY(-3px) scale(1.02);
+      box-shadow: 0 15px 30px rgba(79, 172, 254, 0.4);
+    }
+
+    .download-btn:active {
+      transform: translateY(1px);
+    }
+
+    .download-note {
+      margin-top: 15px;
+      font-size: 12px;
+      color: #666;
+    }
+
+    /* Footer */
+    .footer {
+      position: absolute;
+      bottom: 20px;
+      font-size: 12px;
+      color: #444;
+    }
+
   </style>
 </head>
 <body>
+
+  <div class="glow"></div>
+
+  <a href="https://www.buymeacoffee.com/SENIN_KULLANICI_ADIN" target="_blank" class="coffee-btn">
+    <span class="material-symbols-outlined coffee-icon">coffee</span>
+    <span>Buy Me a Coffee</span>
+  </a>
+
   <div class="card">
     <h1>LAREA</h1>
-    <p>Coming Soon</p>
+    <p class="tagline">Designed for Speed, Security, and Freedom.</p>
+
+    <div class="features">
+      <div class="feature-item">
+        <span class="material-symbols-outlined">rocket_launch</span>
+        Ultra Fast
+      </div>
+      <div class="feature-item">
+        <span class="material-symbols-outlined">security</span>
+        Security
+      </div>
+      <div class="feature-item">
+        <span class="material-symbols-outlined">extension</span>
+        Plugin Support
+      </div>
+      <div class="feature-item">
+        <span class="material-symbols-outlined">music_note</span>
+        Music Finder
+      </div>
+    </div>
+
+    <a href="https://github.com/erencagsak/Larea-Browser/releases/latest/download/Larea.Browser.Setup.0.0.1.exe" class="download-btn">
+      <span class="material-symbols-outlined">download</span>
+      DOWNLOAD NOW
+    </a>
+    
+    <p class="download-note">For Windows 10/11</p>
   </div>
+
+  <div class="footer">© 2025 Larea Browser</div>
+
 </body>
 </html>
